Finished testing air quality sensor and dust sensor

--- a/my_seeed_dust_sensor_example/project.properties
+++ b/my_seeed_dust_sensor_example/project.properties
@@ -1,4 +1,5 @@
-name=groove_air_quality_sensor
+name=my_seeed_dust_sensor_example
 #assetOtaDir=assets
+dependencies.Grove_scd30_co2_sensor=1.0.0
 dependencies.Grove_Air_quality_Sensor=1.0.1
 dependencies.Adafruit_MQTT=1.6.1
